# semana-ai-data-engineer

./: .env.example  .gitignore  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: ai-ml.ai-data-engineer.agent.md  ai-ml.ai-prompt-specialist.agent.md  ai-ml.genai-architect.agent.md  ai-ml.llm-specialist.agent.md  code-quality.llm-specialist.agent.md  code-quality.shell-script-specialist.agent.md  communication.meeting-analyst.agent.md  communication.the-planner.agent.md  domain.aide-slide-builder.agent.md  domain.aide-slide-fixer.agent.md  domain.aide-slide-planner.agent.md  domain.aide-slide-reviewer.md  domain.shopagent-builder.md  exploration.codebase-explorer.md  exploration.kb-architect.md
.github/kb/: _index.yaml
.github/kb/aide-slides/: advanced-visuals.md  animation-patterns.md  component-library.md  design-system.md  index.md  quality-rules.md  semana-palette.md  slide-engine.md  slide-types.md  template.md
.github/kb/architecture/: index.md  quick-reference.md
.github/kb/chainlit/: index.md  quick-reference.md
.github/kb/communication/: index.md  quick-reference.md
.github/kb/crewai/: index.md  quick-reference.md
.github/kb/deepeval/: index.md  quick-reference.md
.github/kb/exploration/: index.md  (+1 more)
.github/prompts/: build-slides.prompt.md  create-kb.prompt.md  meeting.prompt.md  readme-maker.prompt.md  review-slides.prompt.md  review.prompt.md  sync-context.prompt.md
prompts/d2-context/: 09-mcp-qdrant-setup.md  10-dual-store-demo.md
src/day1/: structured_outputs.py
src/day2/: ingest_reviews.py  query_reviews.py
(+154 files in other folders)
